--- a/styles/main.css
+++ b/styles/main.css
@@ -21,11 +21,29 @@ body{
     grid-column: span 4 / span 4;
 }
 
-#buttonArea {
+.buttonArea {
     grid-column: span 2 / span 2;
     grid-row: span 3 / span 3;
     grid-column-start: 1;
     grid-row-start: 3;
+}
+
+#buttonImg {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: 0.1s;
+}
+
+#buttonImg:hover {
+    transform: translate(-50%, -50%) scale(1.05);
+    transition: 0.1s;
+}
+
+#buttonImg:active {
+    transform: translate(-50%, -50%) scale(0.95);
+    transition: 0.1s;
 }
 
 .quickTimeArea {
